<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#054652"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/th_ng_tin_c_nh_n"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h_t_n"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editHoten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmnd"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editCMND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/b_ng_c_p"
        android:textColor="#FFEB3B"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!-- RadioGroup cho Bằng cấp -->
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trung_c_p"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radcd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cao_ng"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/raddh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_h_c"
            android:layout_weight="1"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/s_th_ch"
        android:textColor="#FFEB3B"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkdocbao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_b_o"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/chkdocsach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_s_ch"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/chkdoccoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_coding"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/th_ng_tin_b_sung"
        android:textColor="#FFEB3B"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!-- EditText cho Thông tin bổ sung -->
    <EditText
        android:id="@+id/editBosung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="4" />

    <!-- Button: Gửi thông tin -->
    <Button
        android:id="@+id/btnguitt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/g_i_th_ng_tin"
        android:backgroundTint="#B8B2B2"
        android:textColor="@android:color/black"
        app:cornerRadius="4dp" />

</LinearLayout>